# AutoGPT-Gen-AI-Instrument-with-Rust

./: .gitignore  README.md
auto_gippity/: .env  Cargo.toml  diagram.drawio
auto_gippity/src/: main.rs
auto_gippity/src/ai_functions/: mod.rs
auto_gippity/src/apis/: call_request.rs
auto_gippity/src/helpers/: cli.rs  general.rs  mod.rs
auto_gippity/src/models/: mod.rs
auto_gippity/src/models/agent_basic/: basic_agent.rs  basic_traits.rs
auto_gippity/src/models/agents/: agent_architect.rs  agent_backend.rs  agent_traits.rs
auto_gippity/src/models/agents_manager/: managing_agent.rs
auto_gippity/src/models/general/: llm.rs
playaround/: Cargo.toml  increments.txt
playaround/my_proc_macro/: Cargo.toml
playaround/my_proc_macro/src/: lib.rs
playaround/src/: ex1_enums_traits.rs  m10_procedural_macros.rs  m11_smart_pointers.rs  m12_concurrency.rs  m1_enums.rs  m2_structs.rs  m3_traits.rs  m4_polymorphism.rs  m5_lifetimes.rs  m6_patterns.rs  m7_async.rs  m8_collections.rs  m9_declarative_macros.rs  main.rs
web_template/: Cargo.toml  database.json
web_template/src/: main.rs
